packages/go/include/kreuzcrawl.h


typedef struct KCRAWLBatchCrawlResults KCRAWLBatchCrawlResults;
typedef struct KCRAWLBatchCrawlStreamRequest KCRAWLBatchCrawlStreamRequest;
typedef struct KCRAWLBatchScrapeResults KCRAWLBatchScrapeResults;
typedef struct KCRAWLBrowserConfig KCRAWLBrowserConfig;
typedef struct KCRAWLCitationResult KCRAWLCitationResult;
typedef struct KCRAWLContentConfig KCRAWLContentConfig;
typedef struct KCRAWLCrawlConfig KCRAWLCrawlConfig;
typedef struct KCRAWLCrawlEngineHandle KCRAWLCrawlEngineHandle;
typedef struct KCRAWLCrawlEvent KCRAWLCrawlEvent;
typedef struct KCRAWLCrawlResult KCRAWLCrawlResult;
typedef struct KCRAWLCrawlStreamRequest KCRAWLCrawlStreamRequest;
typedef struct KCRAWLInteractionResult KCRAWLInteractionResult;
typedef struct KCRAWLMapResult KCRAWLMapResult;
typedef struct KCRAWLScrapeResult KCRAWLScrapeResult;
typedef struct KCRAWLKcrawlCrawlEngineHandleBatchCrawlStreamStreamHandle KCRAWLKcrawlCrawlEngineHandleBatchCrawlStreamStreamHandle;
typedef struct KCRAWLKcrawlCrawlEngineHandleCrawlStreamStreamHandle KCRAWLKcrawlCrawlEngineHandleCrawlStreamStreamHandle;
int32_t kcrawl_last_error_code(void);
const char *kcrawl_last_error_context(void);
void kcrawl_free_string(char *ptr);
void kcrawl_free_bytes(uint8_t *ptr,
                       uintptr_t len,
                       uintptr_t cap);
struct KCRAWLKcrawlCrawlEngineHandleCrawlStreamStreamHandle *kcrawl_crawl_engine_handle_crawl_stream_start(const KCRAWLCrawlEngineHandle *client,
                                                                                                           const KCRAWLCrawlStreamRequest *req);
KCRAWLCrawlEvent *kcrawl_crawl_engine_handle_crawl_stream_next(struct KCRAWLKcrawlCrawlEngineHandleCrawlStreamStreamHandle *handle);
void kcrawl_crawl_engine_handle_crawl_stream_free(struct KCRAWLKcrawlCrawlEngineHandleCrawlStreamStreamHandle *handle);
struct KCRAWLKcrawlCrawlEngineHandleBatchCrawlStreamStreamHandle *kcrawl_crawl_engine_handle_batch_crawl_stream_start(const KCRAWLCrawlEngineHandle *client,
                                                                                                                      const KCRAWLBatchCrawlStreamRequest *req);
KCRAWLCrawlEvent *kcrawl_crawl_engine_handle_batch_crawl_stream_next(struct KCRAWLKcrawlCrawlEngineHandleBatchCrawlStreamStreamHandle *handle);
void kcrawl_crawl_engine_handle_batch_crawl_stream_free(struct KCRAWLKcrawlCrawlEngineHandleBatchCrawlStreamStreamHandle *handle);
char *kcrawl_content_config_to_json(const KCRAWLContentConfig *ptr);
void kcrawl_content_config_free(KCRAWLContentConfig *ptr);
KCRAWLContentConfig *kcrawl_content_config_default(void);
char *kcrawl_browser_config_to_json(const KCRAWLBrowserConfig *ptr);
void kcrawl_browser_config_free(KCRAWLBrowserConfig *ptr);
KCRAWLBrowserConfig *kcrawl_browser_config_default(void);
KCRAWLCrawlConfig *kcrawl_crawl_config_from_json(const char *json);
char *kcrawl_crawl_config_to_json(const KCRAWLCrawlConfig *ptr);
void kcrawl_crawl_config_free(KCRAWLCrawlConfig *ptr);
KCRAWLCrawlConfig *kcrawl_crawl_config_default(void);
int32_t kcrawl_crawl_config_validate(const KCRAWLCrawlConfig *this_);
char *kcrawl_interaction_result_to_json(const KCRAWLInteractionResult *ptr);
void kcrawl_interaction_result_free(KCRAWLInteractionResult *ptr);
char *kcrawl_scrape_result_to_json(const KCRAWLScrapeResult *ptr);
void kcrawl_scrape_result_free(KCRAWLScrapeResult *ptr);
KCRAWLCrawlResult *kcrawl_crawl_result_from_json(const char *json);
char *kcrawl_crawl_result_to_json(const KCRAWLCrawlResult *ptr);
void kcrawl_crawl_result_free(KCRAWLCrawlResult *ptr);
uintptr_t kcrawl_crawl_result_unique_normalized_urls(const KCRAWLCrawlResult *this_);
char *kcrawl_map_result_to_json(const KCRAWLMapResult *ptr);
void kcrawl_map_result_free(KCRAWLMapResult *ptr);
KCRAWLCrawlStreamRequest *kcrawl_crawl_stream_request_from_json(const char *json);
void kcrawl_crawl_stream_request_free(KCRAWLCrawlStreamRequest *ptr);
KCRAWLBatchCrawlStreamRequest *kcrawl_batch_crawl_stream_request_from_json(const char *json);
void kcrawl_batch_crawl_stream_request_free(KCRAWLBatchCrawlStreamRequest *ptr);
char *kcrawl_citation_result_to_json(const KCRAWLCitationResult *ptr);
void kcrawl_citation_result_free(KCRAWLCitationResult *ptr);
void kcrawl_crawl_engine_handle_free(KCRAWLCrawlEngineHandle *ptr);
char *kcrawl_batch_scrape_results_to_json(const KCRAWLBatchScrapeResults *ptr);
void kcrawl_batch_scrape_results_free(KCRAWLBatchScrapeResults *ptr);
char *kcrawl_batch_crawl_results_to_json(const KCRAWLBatchCrawlResults *ptr);
void kcrawl_batch_crawl_results_free(KCRAWLBatchCrawlResults *ptr);
void kcrawl_crawl_event_free(KCRAWLCrawlEvent *ptr);
char *kcrawl_crawl_event_to_json(const KCRAWLCrawlEvent *ptr);
KCRAWLCitationResult *kcrawl_generate_citations(const char *markdown);
KCRAWLCrawlEngineHandle *kcrawl_create_engine(const KCRAWLCrawlConfig *config);
KCRAWLScrapeResult *kcrawl_scrape(const KCRAWLCrawlEngineHandle *engine,
                                  const char *url);
KCRAWLCrawlResult *kcrawl_crawl(const KCRAWLCrawlEngineHandle *engine,
                                const char *url);
KCRAWLMapResult *kcrawl_map_urls(const KCRAWLCrawlEngineHandle *engine,
                                 const char *url);
KCRAWLInteractionResult *kcrawl_interact(const KCRAWLCrawlEngineHandle *engine,
                                         const char *url,
                                         const char *actions);
KCRAWLBatchScrapeResults *kcrawl_batch_scrape(const KCRAWLCrawlEngineHandle *engine,
                                              const char *urls);
KCRAWLBatchCrawlResults *kcrawl_batch_crawl(const KCRAWLCrawlEngineHandle *engine,
                                            const char *urls);