packages/csharp/Kreuzcrawl/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:72558e3430fe432c0d196559cdd4f37d88e83d0ce5f9df21ac48756b891a02cb
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Kreuzcrawl;

internal static partial class NativeMethods
{
    private const string LibName = "kreuzcrawl_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_free")]
    internal static extern void CrawlEngineHandleFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_crawl_stream_request_from_json")]
    internal static extern IntPtr BatchCrawlStreamRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_crawl_stream_request_free")]
    internal static extern void BatchCrawlStreamRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_config_from_json")]
    internal static extern IntPtr CrawlConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_config_free")]
    internal static extern void CrawlConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_result_from_json")]
    internal static extern IntPtr CrawlResultFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_result_free")]
    internal static extern void CrawlResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_stream_request_from_json")]
    internal static extern IntPtr CrawlStreamRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_stream_request_free")]
    internal static extern void CrawlStreamRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_crawl_results_to_json")]
    internal static extern IntPtr BatchCrawlResultsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_crawl_results_free")]
    internal static extern void BatchCrawlResultsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_scrape_results_to_json")]
    internal static extern IntPtr BatchScrapeResultsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_scrape_results_free")]
    internal static extern void BatchScrapeResultsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_browser_config_to_json")]
    internal static extern IntPtr BrowserConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_browser_config_free")]
    internal static extern void BrowserConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_citation_result_to_json")]
    internal static extern IntPtr CitationResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_citation_result_free")]
    internal static extern void CitationResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_content_config_to_json")]
    internal static extern IntPtr ContentConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_content_config_free")]
    internal static extern void ContentConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_config_to_json")]
    internal static extern IntPtr CrawlConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_event_to_json")]
    internal static extern IntPtr CrawlEventToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_event_free")]
    internal static extern void CrawlEventFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_result_to_json")]
    internal static extern IntPtr CrawlResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_interaction_result_to_json")]
    internal static extern IntPtr InteractionResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_interaction_result_free")]
    internal static extern void InteractionResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_map_result_to_json")]
    internal static extern IntPtr MapResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_map_result_free")]
    internal static extern void MapResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_scrape_result_to_json")]
    internal static extern IntPtr ScrapeResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_scrape_result_free")]
    internal static extern void ScrapeResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_generate_citations")]
    internal static extern IntPtr GenerateCitations(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string markdown
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_create_engine")]
    internal static extern IntPtr CreateEngine(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_scrape")]
    internal static extern IntPtr Scrape(
        IntPtr engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl")]
    internal static extern IntPtr Crawl(
        IntPtr engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_map_urls")]
    internal static extern IntPtr MapUrls(
        IntPtr engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_interact")]
    internal static extern IntPtr Interact(
        IntPtr engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        IntPtr actions
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_scrape")]
    internal static extern IntPtr BatchScrape(
        IntPtr engine,
        IntPtr urls
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_crawl")]
    internal static extern IntPtr BatchCrawl(
        IntPtr engine,
        IntPtr urls
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_content_config_default")]
    internal static extern IntPtr ContentConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_browser_config_default")]
    internal static extern IntPtr BrowserConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_config_default")]
    internal static extern IntPtr CrawlConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_config_validate")]
    internal static extern void CrawlConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_result_unique_normalized_urls")]
    internal static extern ulong CrawlResultUniqueNormalizedUrls(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_crawl_stream_start")]
    internal static extern IntPtr CrawlEngineHandleCrawlStreamStart(IntPtr client, IntPtr req);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_crawl_stream_next")]
    internal static extern IntPtr CrawlEngineHandleCrawlStreamNext(IntPtr handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_crawl_stream_free")]
    internal static extern void CrawlEngineHandleCrawlStreamFree(IntPtr handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_batch_crawl_stream_start")]
    internal static extern IntPtr CrawlEngineHandleBatchCrawlStreamStart(IntPtr client, IntPtr req);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_batch_crawl_stream_next")]
    internal static extern IntPtr CrawlEngineHandleBatchCrawlStreamNext(IntPtr handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl_engine_handle_batch_crawl_stream_free")]
    internal static extern void CrawlEngineHandleBatchCrawlStreamFree(IntPtr handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);
}
